# h5

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  INSTALL  LICENSE  Makefile  NAMESPACE  NEWS  README.Rmd  README.md  appveyor.yml  cleanup  configure  configure.ac  configure.win  mkdocs.yml  travis_setup.sh
R/: Attribute.R  CommonFG-DataSet.R  CommonFG-Group.R  CommonFG.R  DataSet.R  DataSpace.R  Dataset-Extend.R  Dataset-Subset.R  Dataset.R  Dataspace.R  H5File.R  H5Group.R  H5Location-Attribute.R  H5Location.R  Helpers.R  RcppExports.R  h5-package.R  zzz.R
docs/: h5file.Rmd  h5file.md  index.md  install.md  quickstart.Rmd  quickstart.md
inst/: AUTHORS  COPYRIGHTS  NEWS.Rd  SampleR.hdf  test-ascii-length-bug.h5  test-ascii-length-bug.py  test-f32.h5  test-f32.py  test-h5link.h5  test-h5link.py  test-scalar.h5
inst/benchmark/: benchmark-BigSet.R
inst/include/: h5.h
inst/include/cmakeconf/: H5pubconf.h
inst/include/hdf5/: H5ACpkg.h  H5ACprivate.h  H5Apkg.h  H5Cprivate.h  H5Dprivate.h  H5Dpublic.h  H5Eprivate.h  H5Epublic.h  H5FDprivate.h  H5Fpkg.h  H5Fprivate.h  H5Ipkg.h  H5Ipublic.h  H5Lpublic.h  H5PLextern.h  H5PLprivate.h  H5Ppkg.h  H5Pprivate.h  H5Ppublic.h  H5Spublic.h  H5Zprivate.h  H5private.h  H5public.h  H5win32defs.h
inst/include/hdf5_cpp/: H5DataSpace.h
inst/include/hdf5_hl/: H5DSprivate.h  H5HLprivate2.h  H5LTparse.h  H5LTprivate.h
inst/include/zlib/: zconf.h
inst/staticdocs/: bootstrap-theme.min.css  bootstrap.min.css  bootstrap.min.js  head.html  style.css
man/: Attribute.Rd  CommonFG-DataSet.Rd  CommonFG-Group.Rd  CommonFG.Rd  DataSet-Extend.Rd  DataSet-Subset.Rd  DataSet.Rd  DataSpace.Rd  H5File.Rd  H5Group.Rd  H5Location-Attribute.Rd  H5Location.Rd  h5-deprecated.Rd  h5-package.Rd  h5.Rd
src/: .gitignore  Attribute.cpp  Attribute.h  CommonFG.cpp  CommonFG.h  Dataset.cpp  Dataset.h  Dataspace.cpp  Dataspace.h  File.cpp  File.h  Group.cpp  Group.h  Helpers.cpp  Helpers.h  Makevars  Makevars.in  Makevars.win  Makevars.win.cran  RcppExports.cpp  h5_init.c
tests/: testthat.R
tests/testthat/: test-Attribute.R  test-DataSet-Hyperslab.R  test-DataSet-IO-NA.R  test-DataSet-IO.R  test-DataSet-Select-Elem.R  test-DataSet-Select-Hyperslab.R  test-DataSet-Select-Subset.R  test-DataSet-Vector.R  test-DataSet-extend.R  test-DataSet-scalar.R  test-DataSet.R  test-H5File-Subset.R  test-H5File.R  test-H5Group.R  test-datatypes-array.R  test-datatypes-mat.R  test-datatypes-vec.R  test-enum.R  test-io.R  test-vlen.R
vignette/: ex-matlab.mat  h5.bib
vignettes/: RFin16.Rmd  ex-pandas.h5  h5-Intro.Rmd  h5.Rnw  h5.bib
